Model training updates

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Classification using CNNs via AWS SageMaker\n",
+    "# Dog breed classification using PyTorch and AWS SageMAker\n",
     "\n",
-    "This notebook contains steps and code that uses AWS SageMaker to finetune a pretrained model that can perform image classification. We will make use of SageMaker's Debugger to debug, monitor and profile the training job.  ----ADD MORE DETAILS- maybe about the network used, the library used and other details----\n",
+    "This notebook contains steps and code that uses AWS SageMaker to finetune a pretrained RESNET50 model to perform image classification on dogs, classifying them according to their breeds. We will make use of SageMaker's Debugger to debug, monitor and profile the training job.  ----ADD MORE DETAILS- maybe about the network used, the library used and other details----\n",
     "\n",
     "This notebook lists all the steps that you need to complete the complete this project. You will need to complete all the TODOs in this notebook as well as in the README and the two python scripts included with the starter code.\n",
     "\n",
@@ -15,11 +15,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting smdebug\n",
+      "  Using cached smdebug-1.0.12-py2.py3-none-any.whl (270 kB)\n",
+      "Requirement already satisfied: protobuf>=3.6.0 in /opt/conda/lib/python3.10/site-packages (from smdebug) (3.20.3)\n",
+      "Collecting pyinstrument==3.4.2\n",
+      "  Using cached pyinstrument-3.4.2-py2.py3-none-any.whl (83 kB)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from smdebug) (21.3)\n",
+      "Requirement already satisfied: boto3>=1.10.32 in /opt/conda/lib/python3.10/site-packages (from smdebug) (1.26.69)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /opt/conda/lib/python3.10/site-packages (from smdebug) (1.24.2)\n",
+      "Collecting pyinstrument-cext>=0.2.2\n",
+      "  Using cached pyinstrument_cext-0.2.4.tar.gz (4.8 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: botocore<1.30.0,>=1.29.69 in /opt/conda/lib/python3.10/site-packages (from boto3>=1.10.32->smdebug) (1.29.69)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/conda/lib/python3.10/site-packages (from boto3>=1.10.32->smdebug) (0.10.0)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /opt/conda/lib/python3.10/site-packages (from boto3>=1.10.32->smdebug) (0.6.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.10/site-packages (from packaging->smdebug) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.69->boto3>=1.10.32->smdebug) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/conda/lib/python3.10/site-packages (from botocore<1.30.0,>=1.29.69->boto3>=1.10.32->smdebug) (1.26.14)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.30.0,>=1.29.69->boto3>=1.10.32->smdebug) (1.16.0)\n",
+      "Building wheels for collected packages: pyinstrument-cext\n",
+      "  Building wheel for pyinstrument-cext (setup.py) ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py bdist_wheel\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[8 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m running bdist_wheel\n",
+      "  \u001b[31m   \u001b[0m running build\n",
+      "  \u001b[31m   \u001b[0m running build_ext\n",
+      "  \u001b[31m   \u001b[0m building 'pyinstrument_cext' extension\n",
+      "  \u001b[31m   \u001b[0m creating build\n",
+      "  \u001b[31m   \u001b[0m creating build/temp.linux-x86_64-cpython-310\n",
+      "  \u001b[31m   \u001b[0m gcc -pthread -B /opt/conda/compiler_compat -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -fPIC -O2 -isystem /opt/conda/include -fPIC -O2 -isystem /opt/conda/include -fPIC -I/opt/conda/include/python3.10 -c pyinstrument_cext.c -o build/temp.linux-x86_64-cpython-310/pyinstrument_cext.o\n",
+      "  \u001b[31m   \u001b[0m error: command 'gcc' failed: No such file or directory\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[31m  ERROR: Failed building wheel for pyinstrument-cext\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[?25h  Running setup.py clean for pyinstrument-cext\n",
+      "Failed to build pyinstrument-cext\n",
+      "Installing collected packages: pyinstrument-cext, pyinstrument, smdebug\n",
+      "  Running setup.py install for pyinstrument-cext ... \u001b[?25lerror\n",
+      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
+      "  \n",
+      "  \u001b[31m×\u001b[0m \u001b[32mRunning setup.py install for pyinstrument-cext\u001b[0m did not run successfully.\n",
+      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
+      "  \u001b[31m╰─>\u001b[0m \u001b[31m[10 lines of output]\u001b[0m\n",
+      "  \u001b[31m   \u001b[0m running install\n",
+      "  \u001b[31m   \u001b[0m /opt/conda/lib/python3.10/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.\n",
+      "  \u001b[31m   \u001b[0m   warnings.warn(\n",
+      "  \u001b[31m   \u001b[0m running build\n",
+      "  \u001b[31m   \u001b[0m running build_ext\n",
+      "  \u001b[31m   \u001b[0m building 'pyinstrument_cext' extension\n",
+      "  \u001b[31m   \u001b[0m creating build\n",
+      "  \u001b[31m   \u001b[0m creating build/temp.linux-x86_64-cpython-310\n",
+      "  \u001b[31m   \u001b[0m gcc -pthread -B /opt/conda/compiler_compat -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -fPIC -O2 -isystem /opt/conda/include -fPIC -O2 -isystem /opt/conda/include -fPIC -I/opt/conda/include/python3.10 -c pyinstrument_cext.c -o build/temp.linux-x86_64-cpython-310/pyinstrument_cext.o\n",
+      "  \u001b[31m   \u001b[0m error: command 'gcc' failed: No such file or directory\n",
+      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
+      "  \n",
+      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "\u001b[1;31merror\u001b[0m: \u001b[1mlegacy-install-failure\u001b[0m\n",
+      "\n",
+      "\u001b[31m×\u001b[0m Encountered error while trying to install package.\n",
+      "\u001b[31m╰─>\u001b[0m pyinstrument-cext\n",
+      "\n",
+      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
+      "\u001b[1;36mhint\u001b[0m: See above for output from the failure.\n",
+      "\u001b[?25h"
+     ]
+    }
+   ],
    "source": [
     "!pip install smdebug"
    ]
@@ -61,11 +136,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default Bucket: sagemaker-us-east-1-519574148523\n",
+      "AWS Region: us-east-1\n",
+      "RoleArn: arn:aws:iam::519574148523:role/service-role/AmazonSageMaker-ExecutionRole-20230209T103282\n"
+     ]
+    }
+   ],
    "source": [
     "# Upload the data to Amazon S3\n",
     "\n",
@@ -97,8 +182,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Declare your HP ranges, metrics etc.\n",
@@ -121,8 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#Create estimators for your HPs\n",
@@ -134,7 +223,7 @@
     "            framework_version='1.8.1',\n",
     "            py_version='py3',\n",
     "            instance_count=1,\n",
-    "            instance_type='ml.p3.2xlarge',\n",
+    "            instance_type='ml.m5.large',\n",
     "\t\t)\n",
     "\n",
     "tuner = HyperparameterTuner(\n",
@@ -142,7 +231,7 @@
     "    objective_metric_name,\n",
     "    hyperparameter_ranges,\n",
     "    metric_definitions,\n",
-    "    max_jobs=3,\n",
+    "    max_jobs=2,\n",
     "    max_parallel_jobs=1,\n",
     "    objective_type=objective_type,\n",
     ")"
@@ -150,15 +239,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Fit your HP Tuner\n",
-    "tuner.fit({\n",
+    "# Set certain OS variables\n",
+    "os.environ['SM_MODEL_DIR']='s3://{}/model/'.format(bucket)\n",
+    "#os.environ['SM_OUTPUT_DATA_DIR']='s3://{}/output/'.format(bucket)\n",
+    "os.environ['SM_CHANNEL_TRAIN']='s3://{}/training/'.format(bucket)\n",
+    "os.environ['SM_CHANNEL_TEST']='s3://{}/testing/'.format(bucket)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': 's3://sagemaker-us-east-1-519574148523/train/', 'test': 's3://sagemaker-us-east-1-519574148523/test/'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs={\n",
     "    'train': \"s3://{}/train/\".format(bucket),\n",
     "    'test': \"s3://{}/test/\".format(bucket)\n",
-    "}) "
+    "}\n",
+    "print(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n",
+      "No finished training job found associated with this estimator. Please make sure this estimator is only used for building workflow config\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".................................................................*\n"
+     ]
+    },
+    {
+     "ename": "UnexpectedStatusException",
+     "evalue": "Error for HyperParameterTuning job pytorch-training-230221-1121: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnexpectedStatusException\u001b[0m                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Fit your HP Tuner\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtuner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43mwait\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:272\u001b[0m, in \u001b[0;36mrunnable_by_pipeline.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    268\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m context\n\u001b[1;32m    270\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _StepArguments(retrieve_caller_name(self_instance), run_func, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 272\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrun_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:719\u001b[0m, in \u001b[0;36mHyperparameterTuner.fit\u001b[0;34m(self, inputs, job_name, include_cls_metadata, estimator_kwargs, wait, **kwargs)\u001b[0m\n\u001b[1;32m    716\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_with_estimator_dict(inputs, job_name, include_cls_metadata, estimator_kwargs)\n\u001b[1;32m    718\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m wait:\n\u001b[0;32m--> 719\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlatest_tuning_job\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:1906\u001b[0m, in \u001b[0;36m_TuningJob.wait\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1904\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1905\u001b[0m     \u001b[38;5;124;03m\"\"\"Placeholder docstring.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1906\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msagemaker_session\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait_for_tuning_job\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/session.py:3618\u001b[0m, in \u001b[0;36mSession.wait_for_tuning_job\u001b[0;34m(self, job, poll)\u001b[0m\n\u001b[1;32m   3604\u001b[0m \u001b[38;5;124;03m\"\"\"Wait for an Amazon SageMaker hyperparameter tuning job to complete.\u001b[39;00m\n\u001b[1;32m   3605\u001b[0m \n\u001b[1;32m   3606\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3615\u001b[0m \u001b[38;5;124;03m    exceptions.UnexpectedStatusException: If the hyperparameter tuning job fails.\u001b[39;00m\n\u001b[1;32m   3616\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   3617\u001b[0m desc \u001b[38;5;241m=\u001b[39m _wait_until(\u001b[38;5;28;01mlambda\u001b[39;00m: _tuning_job_status(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msagemaker_client, job), poll)\n\u001b[0;32m-> 3618\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_job_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjob\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHyperParameterTuningJobStatus\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3619\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m desc\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/session.py:3707\u001b[0m, in \u001b[0;36mSession._check_job_status\u001b[0;34m(self, job, desc, status_key_name)\u001b[0m\n\u001b[1;32m   3701\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCapacityError\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(reason):\n\u001b[1;32m   3702\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exceptions\u001b[38;5;241m.\u001b[39mCapacityError(\n\u001b[1;32m   3703\u001b[0m         message\u001b[38;5;241m=\u001b[39mmessage,\n\u001b[1;32m   3704\u001b[0m         allowed_statuses\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompleted\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStopped\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   3705\u001b[0m         actual_status\u001b[38;5;241m=\u001b[39mstatus,\n\u001b[1;32m   3706\u001b[0m     )\n\u001b[0;32m-> 3707\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exceptions\u001b[38;5;241m.\u001b[39mUnexpectedStatusException(\n\u001b[1;32m   3708\u001b[0m     message\u001b[38;5;241m=\u001b[39mmessage,\n\u001b[1;32m   3709\u001b[0m     allowed_statuses\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompleted\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStopped\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   3710\u001b[0m     actual_status\u001b[38;5;241m=\u001b[39mstatus,\n\u001b[1;32m   3711\u001b[0m )\n",
+      "\u001b[0;31mUnexpectedStatusException\u001b[0m: Error for HyperParameterTuning job pytorch-training-230221-1121: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details."
+     ]
+    }
+   ],
+   "source": [
+    "# Fit your HP Tuner\n",
+    "\n",
+    "tuner.fit(inputs,wait=True) "
    ]
   },
   {
@@ -768,11 +927,11 @@
     "vcpuNum": 192
    }
   ],
-  "instance_type": "ml.g4dn.xlarge",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-data-science-310-v1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -784,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
