--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -28,11 +28,11 @@
       "Collecting smdebug\n",
       "  Using cached smdebug-1.0.12-py2.py3-none-any.whl (270 kB)\n",
       "Requirement already satisfied: protobuf>=3.6.0 in /opt/conda/lib/python3.10/site-packages (from smdebug) (3.20.3)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /opt/conda/lib/python3.10/site-packages (from smdebug) (1.24.2)\n",
       "Collecting pyinstrument==3.4.2\n",
       "  Using cached pyinstrument-3.4.2-py2.py3-none-any.whl (83 kB)\n",
       "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from smdebug) (21.3)\n",
       "Requirement already satisfied: boto3>=1.10.32 in /opt/conda/lib/python3.10/site-packages (from smdebug) (1.26.69)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in /opt/conda/lib/python3.10/site-packages (from smdebug) (1.24.2)\n",
       "Collecting pyinstrument-cext>=0.2.2\n",
       "  Using cached pyinstrument_cext-0.2.4.tar.gz (4.8 kB)\n",
       "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -165,9 +165,7 @@
     "print(\"RoleArn: {}\".format(role))\n",
     "\n",
     "os.environ[\"DEFAULT_S3_BUCKET\"] = bucket\n",
-    "!aws s3 sync ./dogImages/train s3://${DEFAULT_S3_BUCKET}/train/\n",
-    "!aws s3 sync ./dogImages/test s3://${DEFAULT_S3_BUCKET}/test/\n",
-    "!aws s3 sync ./dogImages/valid s3://${DEFAULT_S3_BUCKET}/valid/"
+    "!aws s3 sync ./dogImages s3://${DEFAULT_S3_BUCKET}/data/"
    ]
   },
   {
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -231,7 +229,7 @@
     "    objective_metric_name,\n",
     "    hyperparameter_ranges,\n",
     "    metric_definitions,\n",
-    "    max_jobs=2,\n",
+    "    max_jobs=1,\n",
     "    max_parallel_jobs=1,\n",
     "    objective_type=objective_type,\n",
     ")"
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -247,37 +245,13 @@
    "source": [
     "# Set certain OS variables\n",
     "os.environ['SM_MODEL_DIR']='s3://{}/model/'.format(bucket)\n",
-    "#os.environ['SM_OUTPUT_DATA_DIR']='s3://{}/output/'.format(bucket)\n",
-    "os.environ['SM_CHANNEL_TRAIN']='s3://{}/training/'.format(bucket)\n",
-    "os.environ['SM_CHANNEL_TEST']='s3://{}/testing/'.format(bucket)\n"
+    "os.environ['SM_CHANNEL_TRAIN']='s3://{}/data/'.format(bucket)\n",
+    "#os.environ['SM_OUTPUT_DATA_DIR']='s3://{}/output/'.format(bucket)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'train': 's3://sagemaker-us-east-1-519574148523/train/', 'test': 's3://sagemaker-us-east-1-519574148523/test/'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "inputs={\n",
-    "    'train': \"s3://{}/train/\".format(bucket),\n",
-    "    'test': \"s3://{}/test/\".format(bucket)\n",
-    "}\n",
-    "print(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
@@ -294,37 +268,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".................................................................*\n"
+      "...........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................*\n"
      ]
     },
     {
      "ename": "UnexpectedStatusException",
-     "evalue": "Error for HyperParameterTuning job pytorch-training-230221-1121: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details.",
+     "evalue": "Error for HyperParameterTuning job pytorch-training-230221-1529: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnexpectedStatusException\u001b[0m                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Fit your HP Tuner\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtuner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43mwait\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \n",
+      "Cell \u001b[0;32mIn[66], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Fit your HP Tuner\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtuner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43ms3://\u001b[39;49m\u001b[38;5;132;43;01m{}\u001b[39;49;00m\u001b[38;5;124;43m/data/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbucket\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\u001b[43mwait\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m \n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:272\u001b[0m, in \u001b[0;36mrunnable_by_pipeline.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    268\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m context\n\u001b[1;32m    270\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _StepArguments(retrieve_caller_name(self_instance), run_func, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 272\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrun_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:719\u001b[0m, in \u001b[0;36mHyperparameterTuner.fit\u001b[0;34m(self, inputs, job_name, include_cls_metadata, estimator_kwargs, wait, **kwargs)\u001b[0m\n\u001b[1;32m    716\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_with_estimator_dict(inputs, job_name, include_cls_metadata, estimator_kwargs)\n\u001b[1;32m    718\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m wait:\n\u001b[0;32m--> 719\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlatest_tuning_job\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:1906\u001b[0m, in \u001b[0;36m_TuningJob.wait\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1904\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1905\u001b[0m     \u001b[38;5;124;03m\"\"\"Placeholder docstring.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1906\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msagemaker_session\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait_for_tuning_job\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/session.py:3618\u001b[0m, in \u001b[0;36mSession.wait_for_tuning_job\u001b[0;34m(self, job, poll)\u001b[0m\n\u001b[1;32m   3604\u001b[0m \u001b[38;5;124;03m\"\"\"Wait for an Amazon SageMaker hyperparameter tuning job to complete.\u001b[39;00m\n\u001b[1;32m   3605\u001b[0m \n\u001b[1;32m   3606\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3615\u001b[0m \u001b[38;5;124;03m    exceptions.UnexpectedStatusException: If the hyperparameter tuning job fails.\u001b[39;00m\n\u001b[1;32m   3616\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   3617\u001b[0m desc \u001b[38;5;241m=\u001b[39m _wait_until(\u001b[38;5;28;01mlambda\u001b[39;00m: _tuning_job_status(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msagemaker_client, job), poll)\n\u001b[0;32m-> 3618\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_job_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjob\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHyperParameterTuningJobStatus\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3619\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m desc\n",
       "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/session.py:3707\u001b[0m, in \u001b[0;36mSession._check_job_status\u001b[0;34m(self, job, desc, status_key_name)\u001b[0m\n\u001b[1;32m   3701\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCapacityError\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(reason):\n\u001b[1;32m   3702\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exceptions\u001b[38;5;241m.\u001b[39mCapacityError(\n\u001b[1;32m   3703\u001b[0m         message\u001b[38;5;241m=\u001b[39mmessage,\n\u001b[1;32m   3704\u001b[0m         allowed_statuses\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompleted\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStopped\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   3705\u001b[0m         actual_status\u001b[38;5;241m=\u001b[39mstatus,\n\u001b[1;32m   3706\u001b[0m     )\n\u001b[0;32m-> 3707\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exceptions\u001b[38;5;241m.\u001b[39mUnexpectedStatusException(\n\u001b[1;32m   3708\u001b[0m     message\u001b[38;5;241m=\u001b[39mmessage,\n\u001b[1;32m   3709\u001b[0m     allowed_statuses\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompleted\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStopped\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m   3710\u001b[0m     actual_status\u001b[38;5;241m=\u001b[39mstatus,\n\u001b[1;32m   3711\u001b[0m )\n",
-      "\u001b[0;31mUnexpectedStatusException\u001b[0m: Error for HyperParameterTuning job pytorch-training-230221-1121: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details."
+      "\u001b[0;31mUnexpectedStatusException\u001b[0m: Error for HyperParameterTuning job pytorch-training-230221-1529: Failed. Reason: All training jobs failed. Please take a look at the training jobs failures to get more details."
      ]
     }
    ],
    "source": [
     "# Fit your HP Tuner\n",
-    "\n",
-    "tuner.fit(inputs,wait=True) "
+    "tuner.fit({'train': \"s3://{}/data/\".format(bucket)},wait=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Best training job not available for tuning job: pytorch-training-230221-1522",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:1130\u001b[0m, in \u001b[0;36mHyperparameterTuner._get_best_training_job\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1129\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1130\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtuning_job_describe_result\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBestTrainingJob\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m   1131\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'BestTrainingJob'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[58], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get the best estimators and the best HPs\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m best_estimator \u001b[38;5;241m=\u001b[39m \u001b[43mtuner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbest_training_job\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#Get the hyperparameters of the best trained model\u001b[39;00m\n\u001b[1;32m      6\u001b[0m best_estimator\u001b[38;5;241m.\u001b[39mhyperparameters()\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:1114\u001b[0m, in \u001b[0;36mHyperparameterTuner.best_training_job\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1107\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbest_training_job\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1108\u001b[0m     \u001b[38;5;124;03m\"\"\"Return name of the best training job for the latest hyperparameter tuning job.\u001b[39;00m\n\u001b[1;32m   1109\u001b[0m \n\u001b[1;32m   1110\u001b[0m \u001b[38;5;124;03m    Raises:\u001b[39;00m\n\u001b[1;32m   1111\u001b[0m \u001b[38;5;124;03m        Exception: If there is no best training job available for the\u001b[39;00m\n\u001b[1;32m   1112\u001b[0m \u001b[38;5;124;03m            hyperparameter tuning job.\u001b[39;00m\n\u001b[1;32m   1113\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1114\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_best_training_job\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrainingJobName\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/tuner.py:1132\u001b[0m, in \u001b[0;36mHyperparameterTuner._get_best_training_job\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1130\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tuning_job_describe_result[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBestTrainingJob\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   1131\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m-> 1132\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m   1133\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest training job not available for tuning job: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m   1134\u001b[0m             \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlatest_tuning_job\u001b[38;5;241m.\u001b[39mname\n\u001b[1;32m   1135\u001b[0m         )\n\u001b[1;32m   1136\u001b[0m     )\n",
+      "\u001b[0;31mException\u001b[0m: Best training job not available for tuning job: pytorch-training-230221-1522"
+     ]
+    }
+   ],
    "source": [
     "# Get the best estimators and the best HPs\n",
     "\n",
