Hyperparameter Tuning updated

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -188,7 +188,6 @@
    "source": [
     "# Declare your HP ranges, metrics etc.\n",
     "from sagemaker.tuner import (\n",
-    "    IntegerParameter,\n",
     "    CategoricalParameter,\n",
     "    ContinuousParameter,\n",
     "    HyperparameterTuner,\n",
@@ -196,12 +195,11 @@
     "\n",
     "hyperparameter_ranges = {\n",
     "    \"lr\": ContinuousParameter(0.001, 0.1),\n",
-    "    \"batch_size\": CategoricalParameter([32, 64, 128]),\n",
-    "    \"num_epoch\": IntegerParameter(15, 50),\n",
+    "    \"batch_size\": CategoricalParameter([32, 64, 128])\n",
     "}\n",
-    "objective_metric_name = \"average test loss\"\n",
-    "objective_type = \"Minimize\"\n",
-    "metric_definitions = [{\"Name\": \"average test loss\", \"Regex\": \"Test set: Average loss: ([0-9\\\\.]+)\"}]"
+    "objective_metric_name = \"validation:accuracy\"\n",
+    "objective_type = \"Maximize\"\n",
+    "metric_definitions = [{'Name': 'validation:accuracy', 'Regex': 'accuracy=(\\d+\\.\\d+)'}]"
    ]
   },
   {
